--- a/examples/remote/binary_dependencies/Cargo.toml
+++ b/examples/remote/binary_dependencies/Cargo.toml
@@ -16,6 +16,7 @@ gen_workspace_prefix = "remote_binary_dependencies"
 genmode = "Remote"
 default_gen_buildrs = true
 package_aliases_dir = "cargo"
+experimental_api = true
 
 [package.metadata.raze.binary_deps]
 texture-synthesis-cli = "0.8.0"
