--- a/examples/remote/cargo_workspace/Cargo.toml
+++ b/examples/remote/cargo_workspace/Cargo.toml
@@ -11,3 +11,4 @@ gen_workspace_prefix = "remote_cargo_workspace"
 genmode = "Remote"
 default_gen_buildrs = true
 package_aliases_dir = "cargo"
+experimental_api = true
