Fixed missing use of `rust_rules_workspace_name` setting in templates

--- a/impl/src/rendering/templates/partials/build_script.template
+++ b/impl/src/rendering/templates/partials/build_script.template
@@ -1,6 +1,6 @@
 # buildifier: disable=load-on-top
 load(
-    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "@{{ rust_rules_workspace_name }}//cargo:cargo_build_script.bzl",
     "cargo_build_script",
 )
 
