--- a/examples/vendored/cargo_workspace/printer/BUILD.bazel
+++ b/examples/vendored/cargo_workspace/printer/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")
-load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crates")
+load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crate_deps")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -9,5 +9,5 @@ rust_library(
     edition = "2018",
     deps = [
         "//vendored/cargo_workspace/rng",
-    ] + all_crates(),
+    ] + all_crate_deps(),
 )
